--- a/index.less
+++ b/index.less
@@ -1,1 +1,6 @@
-@import "./styles/base.less";
+
+// Syrinx Dark Syntax.
+
+@import "styles/syntax-variables.less";
+@import "./styles/editor.less";
+@import "styles/syntax/_base.less";
