Add basic language support

--- a/index.less
+++ b/index.less
@@ -4,3 +4,6 @@
 @import "styles/syntax-variables.less";
 @import "./styles/editor.less";
 @import "styles/syntax/_base.less";
+@import "styles/syntax/python.less";
+@import "styles/syntax/php.less";
+@import "styles/syntax/javascript.less";
