--- a/styles/syntax/_base.less
+++ b/styles/syntax/_base.less
@@ -84,9 +84,9 @@
     color: @mono-1;
   }
 
-  &.syntax--parameter.syntax--function {
-    color: yellow; //TODO: find correct color
-  }
+  // &.syntax--parameter.syntax--function {
+  //   color: yellow; //TODO: find correct color
+  // }
 }
 
 .syntax--string {
@@ -136,9 +136,9 @@
     }
   }
 
-  &.syntax--section.syntax--embedded {
-    color: darken(yellow, 10%); //TODO: find correct color
-  }
+  // &.syntax--section.syntax--embedded {
+  //   color: darken(yellow, 10%); //TODO: find correct color
+  // }
 
   &.syntax--section {
     &.syntax--embedded {
@@ -176,9 +176,9 @@
     color: @hue-2;
   }
 
-  &.syntax--name.syntax--type {
-    color: yellow; //TODO: find correct color
-  }
+  // &.syntax--name.syntax--type {
+  //   color: @hue-6-2;
+  // }
 
   &.syntax--name.syntax--class,
   &.syntax--name.syntax--type.syntax--class {
@@ -193,9 +193,9 @@
     color: @hue-5;
   }
 
-  &.syntax--other.syntax--inherited-class {
-    color: yellow; //TODO: find correct color
-  }
+  // &.syntax--other.syntax--inherited-class {
+  //   color: yellow; //TODO: find correct color
+  // }
 
   &.syntax--other.syntax--attribute-name {
     color: @hue-6;
@@ -287,13 +287,13 @@
     font-style: italic;
   }
 
-  &.syntax--list {
-    color: yellow; //TODO: find correct color
-  }
-
-  &.syntax--raw.syntax--inline {
-    color: yellow; //find correct color
-  }
+  // &.syntax--list {
+  //   color: yellow; //TODO: find correct color
+  // }
+  //
+  // &.syntax--raw.syntax--inline {
+  //   color: yellow; //find correct color
+  // }
 
   &.syntax--heading {
     color: @hue-5;
