Add italics for return statements

--- a/styles/syntax/_base.less
+++ b/styles/syntax/_base.less
@@ -16,6 +16,10 @@
 
   &.syntax--control {
     color: @hue-3;
+
+    &.syntax--return {
+      font-style: italic;
+    }
   }
 
   &.syntax--operator {
