--- a/styles/syntax/python.less
+++ b/styles/syntax/python.less
@@ -6,4 +6,9 @@
   .syntax--variable.syntax--parameter {
     color: @hue-6;
   }
+
+  .syntax--keyword.syntax--control.syntax--statement {
+    font-style: italic;
+  }
+
 }
