Add initial new colors and italic

--- a/styles/syntax/_base.less
+++ b/styles/syntax/_base.less
@@ -88,6 +88,12 @@
     color: @mono-1;
   }
 
+  &.syntax--language {
+    &.syntax--this {
+      font-style: italic;
+    }
+  }
+
   // &.syntax--parameter.syntax--function {
   //   color: yellow; //TODO: find correct color
   // }
