--- a/styles/syntax/php.less
+++ b/styles/syntax/php.less
@@ -2,6 +2,10 @@
   .syntax--class.syntax--bracket {
     color: @mono-1;
   }
+
+  .syntax--support.syntax--class {
+    color: @hue-3;
+  }
 }
 
 .syntax--entity.syntax--php {
