--- a/styles/colors.less
+++ b/styles/colors.less
@@ -11,17 +11,25 @@
 @mono-3: hsl(@syntax-hue, 10%, 40%);
 
 // Colors -----------------------------------
-@hue-1:   hsl(187, 47%, 55%); // <-cyan
-@hue-2:   hsl(207, 82%, 66%); // <-blue
-@hue-3:   hsl(286, 60%, 67%); // <-purple
-@hue-4:   hsl( 95, 38%, 62%); // <-green
+@hue-1:   hsl(187, 47%, 55%); // <-cyan # 56B6C2
+@hue-2:   hsl(207, 82%, 66%); // <-blue # 61AFEF
 
-@hue-5:   hsl(355, 65%, 65%); // <-red 1
-@hue-5-2: hsl(  5, 48%, 51%); // <-red 2
+//@hue-3:   hsl(286, 60%, 67%); // <-purple
+@hue-3:   hsl(240, 58%, 68%); // <-purple # 7E7EDD
 
-@hue-6:   hsl( 29, 54%, 61%); // <-orange 1
-@hue-6-2: hsl( 39, 67%, 69%); // <-orange 2
+//@hue-4:   hsl( 95, 38%, 62%); // <-green # 98C379
+@hue-4:   hsl(249, 100%, 94%);
 
+// @hue-5:   hsl(355, 65%, 65%); // <-red 1
+// @hue-5-2: hsl(  5, 48%, 51%); // <-red 2
+@hue-5:   hsl(211, 60%, 70%); // <- light blue # 85B1E0
+@hue-5-2: hsl(211, 55%, 55%); // <- dark light blue
+
+//@hue-6:   hsl( 29, 54%, 61%); // <-orange 1
+//@hue-6-2: hsl( 39, 67%, 69%); // <-orange 2
+
+@hue-6:   hsl(200, 22%, 60%); // <- light bluegray
+@hue-6-2: hsl(200, 20%, 42%); // <- bluegray
 
 // Base colors -----------------------------------
 @syntax-fg:     @mono-1;
