--- a/styles/syntax/python.less
+++ b/styles/syntax/python.less
@@ -11,4 +11,10 @@
     font-style: italic;
   }
 
+  .syntax--punctuation.syntax--definition.syntax--string.syntax--begin,
+  .syntax--punctuation.syntax--definition.syntax--string.syntax--end,
+  .syntax--string.syntax--quoted.syntax--double.syntax--block {
+    color: @mono-3;
+    font-style: italic;
+  }
 }
