Add new syntax colors based on Nord

--- a/index.less
+++ b/index.less
@@ -5,7 +5,7 @@
 @import "./styles/editor.less";
 @import "styles/syntax/_base.less";
 // @import "styles/syntax/python.less";
-// @import "styles/syntax/php.less";
+@import "styles/syntax/php.less";
 // @import "styles/syntax/javascript.less";
 // @import "styles/syntax/typescript.less";
 // @import "styles/syntax/html.less";
