--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,39 +1,25 @@
 
-// Config -----------------------------------
-@syntax-hue:          220;
-@syntax-saturation:   13%;
-@syntax-brightness:   18%;
+// Nord Atom colors: https://github.com/arcticicestudio/nord-atom-syntax
+// Styleguide Nord - Polar Night
+@nord0: #2E3440;
+@nord1: #3B4252;
+@nord2: #434C5E;
+@nord3: #4C566A;
 
+// Styleguide Nord - Snow Storm
+@nord4: #D8DEE9;
+@nord5: #E5E9F0;
+@nord6: #ECEFF4;
 
-// Monochrome -----------------------------------
-@mono-1: hsl(@syntax-hue, 14%, 71%); // default text
-@mono-2: hsl(@syntax-hue,  9%, 55%);
-@mono-3: hsl(@syntax-hue, 10%, 40%);
+// Styleguide Nord - Frost
+@nord7: #8FBCBB;
+@nord8: #88C0D0;
+@nord9: #81A1C1;
+@nord10: #5E81AC;
 
-// Colors -----------------------------------
-@hue-1:   hsl(187, 47%, 55%); // <-cyan # 56B6C2
-@hue-2:   hsl(207, 82%, 66%); // <-blue # 61AFEF
-
-//@hue-3:   hsl(286, 60%, 67%); // <-purple
-@hue-3:   hsl(240, 58%, 68%); // <-purple # 7E7EDD
-
-//@hue-4:   hsl( 95, 38%, 62%); // <-green # 98C379
-@hue-4:   hsl(249, 100%, 94%);
-
-// @hue-5:   hsl(355, 65%, 65%); // <-red 1
-// @hue-5-2: hsl(  5, 48%, 51%); // <-red 2
-@hue-5:   hsl(211, 60%, 70%); // <- light blue # 85B1E0
-@hue-5-2: hsl(211, 55%, 55%); // <- dark light blue
-
-//@hue-6:   hsl( 29, 54%, 61%); // <-orange 1
-//@hue-6-2: hsl( 39, 67%, 69%); // <-orange 2
-
-@hue-6:   hsl(200, 22%, 60%); // <- light bluegray
-@hue-6-2: hsl(200, 20%, 42%); // <- bluegray
-
-// Base colors -----------------------------------
-@syntax-fg:     @mono-1;
-@syntax-bg:     hsl(@syntax-hue, @syntax-saturation, @syntax-brightness);
-@syntax-gutter: darken(@syntax-fg, 26%);
-@syntax-guide:  fade(@syntax-fg, 15%);
-@syntax-accent: hsl(@syntax-hue, 100%, 66% );
+// Styleguide Nord - Aurora
+@nord11: #BF616A;
+@nord12: #D08770;
+@nord13: #EBCB8B;
+@nord14: #A3BE8C;
+@nord15: #B48EAD;
