--- a/styles/syntax/typescript.less
+++ b/styles/syntax/typescript.less
@@ -1,13 +1,14 @@
-.syntax--source.syntax--ts {
-  .syntax--keyword.syntax--control.syntax--flow {
-    font-style: italic;
-  }
-
-  .syntax--function {
-    color: @hue-2;
-  }
-
-  .syntax--storage.syntax--type {
-    font-style: italic;
-  }
-}
+// .syntax--source.syntax--ts {
+//   .syntax--keyword.syntax--control.syntax--flow {
+//     color: @syntax-color-return;
+//     font-style: italic;
+//   }
+//
+//   .syntax--function {
+//     color: @syntax-color-function;
+//   }
+//
+//   .syntax--storage.syntax--type {
+//     font-style: italic;
+//   }
+// }
