--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -1,56 +1,112 @@
 @import "colors.less";
 
-// Official Syntax Variables -----------------------------------
+/*+------------+
+  + Animations +
+  +------------+*/
+@syntax-transition-time: 400ms;
 
-// General colors
-@syntax-text-color:            @syntax-fg;
-@syntax-cursor-color:          @syntax-accent;
-@syntax-selection-color:       lighten(@syntax-background-color, 10%);
-@syntax-selection-flash-color: @syntax-accent;
-@syntax-background-color:      @syntax-bg;
+/*+------+
+  + Base +
+  +------+*/
+@syntax-theme-name: nord-atom-syntax;
 
-// Guide colors
-@syntax-wrap-guide-color:          @syntax-guide;
-@syntax-indent-guide-color:        @syntax-guide;
-@syntax-invisible-character-color: @syntax-guide;
+@syntax-background-color: @nord0;
+@syntax-cursor-line: fade(@nord2, 32%);
+@syntax-selection-color: fade(@nord2, 80%);
+@syntax-selection-flash-color: @nord8;
+@syntax-text-color: @nord4;
 
-// For find and replace markers
-@syntax-result-marker-color:          fade(@syntax-accent, 24%);
-@syntax-result-marker-color-selected: @syntax-accent;
+/*+-----------------+
+  + Editor Elements +
+  +-----------------+*/
+@syntax-cursor-color: @syntax-text-color;
+@syntax-indent-guide-color: @nord2;
+@syntax-invisible-character-color: @nord3;
+@syntax-wrap-guide-color: @nord3;
 
-// Gutter colors
-@syntax-gutter-text-color:                @syntax-gutter;
-@syntax-gutter-text-color-selected:       @syntax-fg;
-@syntax-gutter-background-color:          @syntax-bg; // unused
-@syntax-gutter-background-color-selected: lighten(@syntax-bg, 8%);
+/*+-----+
+  + Git +
+  +-----+*/
+@syntax-color-added: @nord14;
+@syntax-color-modified: @nord13;
+@syntax-color-removed: @nord11;
+@syntax-color-renamed: @nord8;
 
-// Git colors - For git diff info. i.e. in the gutter
-@syntax-color-renamed:  hsl(208, 100%, 60%);
-@syntax-color-added:    hsl(150,  60%, 54%);
-@syntax-color-modified: hsl(40,   60%, 70%);
-@syntax-color-removed:  hsl(0,    70%, 60%);
+/*+--------+
+  + Gutter +
+  +--------+*/
+@syntax-gutter-background-color: @syntax-background-color;
+@syntax-gutter-background-color-selected: transparent;
+@syntax-gutter-icon-color-folded: @nord8;
+@syntax-gutter-text-color: @syntax-gutter-text-color-subtle;
+@syntax-gutter-text-color-selected: @nord6;
+@syntax-gutter-text-color-subtle: fade(@syntax-text-color, 40%);
 
-// For language entity colors
-@syntax-color-variable:   @hue-5;
-@syntax-color-constant:   @hue-6;
-@syntax-color-property:   @syntax-fg;
-@syntax-color-value:      @syntax-fg;
-@syntax-color-function:   @hue-2;
-@syntax-color-method:     @hue-2;
-@syntax-color-class:      @hue-6-2;
-@syntax-color-keyword:    @hue-3;
-@syntax-color-tag:        @hue-5;
-@syntax-color-attribute:  @hue-6;
-@syntax-color-import:     @hue-3;
-@syntax-color-snippet:    @hue-4;
+/*+-------------------+
+  + Language Entities +
+  +-------------------+*/
+/*+--- Base ---+*/
+@syntax-color-annotation: @nord12;
+@syntax-color-attribute: @nord7;
+@syntax-color-attribute-id: @nord7;
+@syntax-color-class: @nord7;
+@syntax-color-comment: @nord3;
+@syntax-color-constant: @nord7;
+@syntax-color-embedded: @nord9;
+@syntax-color-escape: @nord12;
+@syntax-color-function: @nord8;
+@syntax-color-import: @nord7;
+@syntax-color-keyword: @nord9;
+@syntax-color-method: @nord8;
+@syntax-color-numeric: @nord15;
+@syntax-color-operator: @nord9;
+@syntax-color-placeholder: @nord12;
+@syntax-color-preprocessor: @nord10;
+@syntax-color-primitive: @nord9;
+@syntax-color-property: @nord9;
+@syntax-color-punctuation: @nord4;
+@syntax-color-regexp: @nord13;
+@syntax-color-require: @nord10;
+@syntax-color-selector: @nord7;
+@syntax-color-snippet: @nord4;
+@syntax-color-storage: @nord9;
+@syntax-color-string: @nord14;
+@syntax-color-tag: @nord9;
+@syntax-color-tag-template: @nord10;
+@syntax-color-type: @nord7;
+@syntax-color-unit: @nord9;
+@syntax-color-variable: @nord4;
+@syntax-deprecated: @nord13;
+@syntax-illegal: @nord11;
 
+/*+--- Specific ---+*/
+@syntax-color-css-property: @nord7;
+@syntax-color-diff-separator: @nord9;
+@syntax-color-java-bracket-angle: @nord9;
+@syntax-color-java-javadoc-tag: @nord7;
+@syntax-color-markup-code: @nord7;
+@syntax-color-markup-entity: @nord12;
+@syntax-color-markup-heading: @nord8;
+@syntax-color-markup-heading-marker: @nord9;
+@syntax-color-markup-hr: @nord9;
+@syntax-color-markup-link: @nord8;
+@syntax-color-markup-punctuation: @nord9;
+@syntax-color-markup-quote: @nord6;
 
-// Custom Syntax Variables -----------------------------------
-// Don't use in packages
+/*+--------+
+  + Marker +
+  +--------+*/
+@syntax-bracket-matcher-color: @nord8;
+@syntax-result-marker-color: fade(@nord8, 30%);
+@syntax-result-marker-color-selected: @nord8;
 
-@syntax-cursor-line: hsla(@syntax-hue, 100%,  80%, .04); // needs to be semi-transparent to show search results
+/*+-------+
+  + Sizes +
+  +-------+*/
+@syntax-border-radius: 4px;
 
-@syntax-deprecated-fg: darken(@syntax-color-modified, 50%);
-@syntax-deprecated-bg: @syntax-color-modified;
-@syntax-illegal-fg:    white;
-@syntax-illegal-bg:    @syntax-color-removed;
+/*+------------------------+
+  + Default Theme Settings +
+  +------------------------+*/
+/*+--- Accessibility ---+*/
+@theme-setting-accessibility-custom-comment-contrast: 0%;
