--- a/styles/syntax/javascript.less
+++ b/styles/syntax/javascript.less
@@ -1,36 +1,36 @@
-// .syntax--source.syntax--js {
-//   .syntax--keyword.syntax--operator {
-//     color: @hue-1;
+// // .syntax--source.syntax--js {
+// //   .syntax--keyword.syntax--operator {
+// //     color: @hue-1;
+// //
+// //     // keywords are definded in https://github.com/atom/language-javascript/blob/master/grammars/javascript.cson
+// //     // search "instanceof" for location
+// //     &.syntax--delete,
+// //     &.syntax--in,
+// //     &.syntax--of,
+// //     &.syntax--instanceof,
+// //     &.syntax--new,
+// //     &.syntax--typeof,
+// //     &.syntax--void {
+// //       color: @hue-3;
+// //     }
+// //   }
+// //
+// //   .syntax--keyword.syntax--control.syntax--flow {
+// //     font-style: italic;
+// //   }
+// // }
 //
-//     // keywords are definded in https://github.com/atom/language-javascript/blob/master/grammars/javascript.cson
-//     // search "instanceof" for location
-//     &.syntax--delete,
-//     &.syntax--in,
-//     &.syntax--of,
-//     &.syntax--instanceof,
-//     &.syntax--new,
-//     &.syntax--typeof,
-//     &.syntax--void {
-//       color: @hue-3;
-//     }
+// .syntax--source.syntax--js {
+//   .syntax--meta.syntax--variable.syntax--language,
+//   .syntax--keyword.syntax--control {
+//     font-style: italic;
 //   }
 //
-//   .syntax--keyword.syntax--control.syntax--flow {
+//   .syntax--function {
+//     color: @hue-2;
+//   }
+//
+//   .syntax--storage.syntax--type {
 //     font-style: italic;
 //   }
 // }
-
-.syntax--source.syntax--js {
-  .syntax--meta.syntax--variable.syntax--language,
-  .syntax--keyword.syntax--control {
-    font-style: italic;
-  }
-
-  .syntax--function {
-    color: @hue-2;
-  }
-
-  .syntax--storage.syntax--type {
-    font-style: italic;
-  }
-}
