Add basic colors and syntax

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -1,13 +1,9 @@
 @import "colors.less";
 
-/*+------------+
-  + Animations +
-  +------------+*/
+//Animations
 @syntax-transition-time: 400ms;
 
-/*+------+
-  + Base +
-  +------+*/
+//Base
 @syntax-theme-name: nord-atom-syntax;
 
 @syntax-background-color: @nord0;
@@ -16,25 +12,19 @@
 @syntax-selection-flash-color: @nord8;
 @syntax-text-color: @nord4;
 
-/*+-----------------+
-  + Editor Elements +
-  +-----------------+*/
+//Elements
 @syntax-cursor-color: @syntax-text-color;
 @syntax-indent-guide-color: @nord2;
 @syntax-invisible-character-color: @nord3;
 @syntax-wrap-guide-color: @nord3;
 
-/*+-----+
-  + Git +
-  +-----+*/
+//Git
 @syntax-color-added: @nord14;
 @syntax-color-modified: @nord13;
 @syntax-color-removed: @nord11;
 @syntax-color-renamed: @nord8;
 
-/*+--------+
-  + Gutter +
-  +--------+*/
+//Gutter
 @syntax-gutter-background-color: @syntax-background-color;
 @syntax-gutter-background-color-selected: transparent;
 @syntax-gutter-icon-color-folded: @nord8;
@@ -42,10 +32,9 @@
 @syntax-gutter-text-color-selected: @nord6;
 @syntax-gutter-text-color-subtle: fade(@syntax-text-color, 40%);
 
-/*+-------------------+
-  + Language Entities +
-  +-------------------+*/
-/*+--- Base ---+*/
+//Entities
+
+//Base
 @syntax-color-annotation: @nord12;
 @syntax-color-attribute: @nord7;
 @syntax-color-attribute-id: @nord7;
@@ -79,7 +68,7 @@
 @syntax-deprecated: @nord13;
 @syntax-illegal: @nord11;
 
-/*+--- Specific ---+*/
+//Specific
 @syntax-color-css-property: @nord7;
 @syntax-color-diff-separator: @nord9;
 @syntax-color-java-bracket-angle: @nord9;
@@ -93,20 +82,15 @@
 @syntax-color-markup-punctuation: @nord9;
 @syntax-color-markup-quote: @nord6;
 
-/*+--------+
-  + Marker +
-  +--------+*/
+//Marker
 @syntax-bracket-matcher-color: @nord8;
 @syntax-result-marker-color: fade(@nord8, 30%);
 @syntax-result-marker-color-selected: @nord8;
 
-/*+-------+
-  + Sizes +
-  +-------+*/
+//Size
 @syntax-border-radius: 4px;
 
-/*+------------------------+
-  + Default Theme Settings +
-  +------------------------+*/
-/*+--- Accessibility ---+*/
+//Default Theme
+
+//Acessibility
 @theme-setting-accessibility-custom-comment-contrast: 0%;
