--- a/styles/editor.less
+++ b/styles/editor.less
@@ -5,9 +5,7 @@ atom-text-editor {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
-  /*+----------+
-    + Elements +
-    +----------+*/
+  //Elements
   .bracket-matcher .region {
     border: 1px solid @syntax-bracket-matcher-color;
     box-sizing: border-box;
@@ -41,9 +39,7 @@ atom-text-editor {
     background-color: @syntax-wrap-guide-color;
   }
 
-  /*+------------------+
-    + find-and-replace +
-    +------------------+*/
+  //Find and replace
   .find-result .region.region.region,
   .current-result .region.region.region {
     background-color: @syntax-result-marker-color;
@@ -60,9 +56,7 @@ atom-text-editor {
     border: 2px solid transparent;
   }
 
-  /*+--------+
-    + Gutter +
-    +--------+*/
+  //Gutter
   .gutter {
     font-weight: 300;
     -webkit-font-smoothing: antialiased;
