--- a/styles/syntax/html.less
+++ b/styles/syntax/html.less
@@ -1,6 +1,5 @@
-//
-// .syntax--text.syntax--html.syntax--basic {
-//   .syntax--entity.syntax--other.syntax--attribute-name {
-//     font-style: italic;
-//   }
-// }
+.syntax--text.syntax--html.syntax--basic {
+  .syntax--entity.syntax--other.syntax--attribute-name {
+    font-style: italic;
+  }
+}
