--- a/styles/syntax/typescript.less
+++ b/styles/syntax/typescript.less
@@ -1,14 +1,17 @@
-// .syntax--source.syntax--ts {
-//   .syntax--keyword.syntax--control.syntax--flow {
-//     color: @syntax-color-return;
-//     font-style: italic;
-//   }
-//
-//   .syntax--function {
-//     color: @syntax-color-function;
-//   }
-//
-//   .syntax--storage.syntax--type {
-//     font-style: italic;
-//   }
-// }
+.syntax--source.syntax--ts {
+  .syntax--keyword.syntax--control.syntax--flow {
+    font-style: italic;
+  }
+
+  .syntax--variable.syntax--language.syntax--this {
+    font-style: italic;
+  }
+
+  .syntax--punctuation.syntax--definition.syntax--comment {
+    font-style: italic;
+  }
+
+  .syntax--storage.syntax--type {
+    font-style: italic;
+  }
+}
