--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,15 +1,26 @@
-// These colors are specific to the theme. Do not use in a package!
 
-@very-light-gray: #c5c8c6;
-@light-gray: #969896;
-@gray: #373b41;
-@dark-gray: #282a2e;
-@very-dark-gray: #1d1f21;
+// Nord Atom colors: https://github.com/arcticicestudio/nord-atom-syntax
 
-@cyan: #8abeb7;
-@blue: #81a2be;
-@purple: #b294bb;
-@green: #b5bd68;
-@red: #cc6666;
-@orange: #de935f;
-@light-orange: #f0c674;
+// Styleguide Nord - Polar Night
+@nord0: #2E3440;
+@nord1: #3B4252;
+@nord2: #434C5E;
+@nord3: #4C566A;
+
+// Styleguide Nord - Snow Storm
+@nord4: #D8DEE9;
+@nord5: #E5E9F0;
+@nord6: #ECEFF4;
+
+// Styleguide Nord - Frost
+@nord7: #8FBCBB;
+@nord8: #88C0D0;
+@nord9: #81A1C1;
+@nord10: #5E81AC;
+
+// Styleguide Nord - Aurora
+@nord11: #BF616A;
+@nord12: #D08770;
+@nord13: #EBCB8B;
+@nord14: #A3BE8C;
+@nord15: #B48EAD;
