--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -1,31 +1,96 @@
-@import "colors";
+@import "colors.less";
 
-// This defines all syntax variables that syntax themes must implement when they
-// include a syntax-variables.less file.
+//Animations
+@syntax-transition-time: 400ms;
 
-// General colors
-@syntax-text-color: @very-light-gray;
-@syntax-cursor-color: white;
-@syntax-selection-color: lighten(@dark-gray, 10%);
-@syntax-background-color: @very-dark-gray;
+//Base
+@syntax-theme-name: nord-atom-syntax;
 
-// Guide colors
-@syntax-wrap-guide-color: @dark-gray;
-@syntax-indent-guide-color: @gray;
-@syntax-invisible-character-color: @gray;
+@syntax-background-color: @nord0;
+@syntax-cursor-line: fade(@nord2, 32%);
+@syntax-selection-color: fade(@nord2, 80%);
+@syntax-selection-flash-color: @nord8;
+@syntax-text-color: @nord4;
 
-// For find and replace markers
-@syntax-result-marker-color: @light-gray;
-@syntax-result-marker-color-selected: white;
+//Elements
+@syntax-cursor-color: @syntax-text-color;
+@syntax-indent-guide-color: @nord2;
+@syntax-invisible-character-color: @nord3;
+@syntax-wrap-guide-color: @nord3;
 
-// Gutter colors
-@syntax-gutter-text-color: @very-light-gray;
-@syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @dark-gray;
-@syntax-gutter-background-color-selected: @gray;
+//Git
+@syntax-color-added: @nord14;
+@syntax-color-modified: @nord13;
+@syntax-color-removed: @nord11;
+@syntax-color-renamed: @nord8;
 
-// For git diff info. i.e. in the gutter
-@syntax-color-renamed: @blue;
-@syntax-color-added: @green;
-@syntax-color-modified: @orange;
-@syntax-color-removed: @red;
+//Gutter
+@syntax-gutter-background-color: @syntax-background-color;
+@syntax-gutter-background-color-selected: transparent;
+@syntax-gutter-icon-color-folded: @nord8;
+@syntax-gutter-text-color: @syntax-gutter-text-color-subtle;
+@syntax-gutter-text-color-selected: @nord6;
+@syntax-gutter-text-color-subtle: fade(@syntax-text-color, 40%);
+
+//Entities
+
+//Base
+@syntax-color-annotation: @nord12;
+@syntax-color-attribute: @nord7;
+@syntax-color-attribute-id: @nord7;
+@syntax-color-class: @nord7;
+@syntax-color-comment: @nord3;
+@syntax-color-constant: @nord7;
+@syntax-color-embedded: @nord9;
+@syntax-color-escape: @nord12;
+@syntax-color-function: @nord8;
+@syntax-color-import: @nord7;
+@syntax-color-keyword: @nord9;
+@syntax-color-method: @nord8;
+@syntax-color-numeric: @nord15;
+@syntax-color-operator: @nord9;
+@syntax-color-placeholder: @nord12;
+@syntax-color-preprocessor: @nord10;
+@syntax-color-primitive: @nord9;
+@syntax-color-property: @nord9;
+@syntax-color-punctuation: @nord4;
+@syntax-color-regexp: @nord13;
+@syntax-color-require: @nord10;
+@syntax-color-selector: @nord7;
+@syntax-color-snippet: @nord4;
+@syntax-color-storage: @nord9;
+@syntax-color-string: @nord14;
+@syntax-color-tag: @nord9;
+@syntax-color-tag-template: @nord10;
+@syntax-color-type: @nord7;
+@syntax-color-unit: @nord9;
+@syntax-color-variable: @nord4;
+@syntax-deprecated: @nord13;
+@syntax-illegal: @nord11;
+
+//Specific
+@syntax-color-css-property: @nord7;
+@syntax-color-diff-separator: @nord9;
+@syntax-color-java-bracket-angle: @nord9;
+@syntax-color-java-javadoc-tag: @nord7;
+@syntax-color-markup-code: @nord7;
+@syntax-color-markup-entity: @nord12;
+@syntax-color-markup-heading: @nord8;
+@syntax-color-markup-heading-marker: @nord9;
+@syntax-color-markup-hr: @nord9;
+@syntax-color-markup-link: @nord8;
+@syntax-color-markup-punctuation: @nord9;
+@syntax-color-markup-quote: @nord6;
+
+//Marker
+@syntax-bracket-matcher-color: @nord8;
+@syntax-result-marker-color: fade(@nord8, 30%);
+@syntax-result-marker-color-selected: @nord8;
+
+//Size
+@syntax-border-radius: 4px;
+
+//Default Theme
+
+//Acessibility
+@theme-setting-accessibility-custom-comment-contrast: 0%;
