Add python support

--- a/index.less
+++ b/index.less
@@ -7,3 +7,4 @@
 @import "styles/syntax/php.less";
 @import "styles/syntax/typescript.less";
 @import "styles/syntax/html.less";
+@import "styles/syntax/python.less";
