Darkened documentation blocks

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -39,7 +39,7 @@
 @syntax-color-attribute: @nord7;
 @syntax-color-attribute-id: @nord7;
 @syntax-color-class: @nord7;
-@syntax-color-comment: @nord3;
+@syntax-color-comment: @light-gray; // <- custom from @nord3;
 @syntax-color-constant: @nord7;
 @syntax-color-embedded: @nord9;
 @syntax-color-escape: @nord12;
