--- a/styles/syntax/html.less
+++ b/styles/syntax/html.less
@@ -2,4 +2,8 @@
   .syntax--entity.syntax--other.syntax--attribute-name {
     font-style: italic;
   }
+
+  .syntax--comment {
+    font-style: italic;
+  }
 }
