--- a/styles/syntax/typescript.less
+++ b/styles/syntax/typescript.less
@@ -14,4 +14,8 @@
   .syntax--storage.syntax--type {
     font-style: italic;
   }
+
+  .syntax--documentation .syntax--jsdoc {
+    color: @syntax-color-comment;
+  }
 }
