--- a/styles/syntax/javascript.less
+++ b/styles/syntax/javascript.less
@@ -1,56 +1,11 @@
 .syntax--source.syntax--js {
 
-  .syntax--punctuation {
-    &.syntax--definition {
-
-      &.syntax--bracket {
-        &.syntax--curly {
-          &.syntax--begin,
-          &.syntax--end {
-            &.syntax--jsdoc {
-              color: @syntax-color-comment !important;
-            }
-          }
-        }
-      }
-
-      &.syntax--block {
-        &.syntax--tag {
-          &.syntax--jsdoc {
-            color: @syntax-color-comment !important;
-          }
-        }
-      }
-    }
-  }
-
-  .syntax--storage {
-    &.syntax--type {
-
-      &.syntax--class {
-        font-style: italic;
-      }
-
-      &.syntax--class {
-        &.syntax--jsdoc {
-          color: @syntax-color-comment !important;
-        }
-      }
-
-    }
+  .syntax--documentation .syntax--jsdoc {
+    color: @syntax-color-comment;
   }
 
   .syntax--entity {
     &.syntax--name {
-
-      &.syntax--type {
-        &.syntax--instance {
-          &.syntax--jsdoc {
-            color: @syntax-color-comment !important;
-          }
-        }
-      }
-
       &.syntax--function {
         &.syntax--constructor {
           font-style: italic;
@@ -66,12 +21,6 @@
   }
 
   .syntax--variable {
-    &.syntax--other {
-      &.syntax--jsdoc {
-        color: @syntax-color-comment !important;
-      }
-    }
-
     &.syntax--language {
       font-style: italic;
     }
