--- a/styles/syntax/php.less
+++ b/styles/syntax/php.less
@@ -1,21 +1,38 @@
 .syntax--source.syntax--php {
+
   .syntax--storage.syntax--type.syntax--class {
     font-style: italic;
   }
 
-  .syntax--support.syntax--function.syntax--magic {
-    font-style: italic;
+  .syntax--support {
+    &.syntax--function.syntax--magic {
+      font-style: italic;
+    }
   }
 
-  .syntax--keyword.syntax--control.syntax--return {
-    font-style: italic;
+  .syntax--keyword {
+    &.syntax--control.syntax--return {
+      font-style: italic;
+    }
   }
 
   .syntax--variable.syntax--language.syntax--this {
     font-style: italic;
   }
 
-  .syntax--punctuation.syntax--definition.syntax--variable {
-    color: @syntax-color-keyword;
+  .syntax--phpdoc {
+    & .syntax--phpdoc,
+    & .syntax--support.syntax--class,
+    & .syntax--namespace,
+    & .syntax--inheritance,
+    & .syntax--type {
+      color: @syntax-color-comment;
+    }
+  }
+
+  .syntax--punctuation {
+    &.syntax--definition.syntax--variable {
+      color: @syntax-color-keyword;
+    }
   }
 }
