Add golang language support

--- a/index.less
+++ b/index.less
@@ -9,3 +9,4 @@
 @import "styles/syntax/python.less";
 @import "styles/syntax/typescript.less";
 @import "styles/syntax/php.less";
+@import "styles/syntax/go.less";
