--- a/styles/syntax/python.less
+++ b/styles/syntax/python.less
@@ -36,7 +36,10 @@
     font-style: italic;
   }
 
-  .syntax--keyword.syntax--control.syntax--statement {
-    font-style: italic;
+  .syntax--keyword {
+    &.syntax--control,
+    &.syntax--control.syntax--statement {
+      font-style: italic;
+    }
   }
 }
