--- a/styles/syntax/typescript.less
+++ b/styles/syntax/typescript.less
@@ -18,4 +18,8 @@
   .syntax--documentation .syntax--jsdoc {
     color: @syntax-color-comment;
   }
+
+  .syntax--keyword.syntax--control {
+    font-style: italic;
+  }
 }
